// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PillButton component matches snapshot for default and selected states 1`] = `
<button
  aria-pressed="false"
  class="h-10 px-4 mx-1 rounded-full font-medium transition-colors duration-200 cursor-pointer focus:outline-none focus:ring-2 focus:ring-indigo-300 focus:ring-offset-1 bg-white text-gray-700 border border-gray-200 hover:bg-gray-100"
  type="button"
>
  Demo
</button>
`;

exports[`PillButton component matches snapshot for default and selected states 2`] = `
<button
  aria-pressed="true"
  class="h-10 px-4 mx-1 rounded-full font-medium transition-colors duration-200 cursor-pointer focus:outline-none focus:ring-2 focus:ring-indigo-300 focus:ring-offset-1 bg-indigo-600 text-white border-indigo-600"
  type="button"
>
  Demo
</button>
`;
